--- a/src/testing.ipynb
+++ b/src/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -58,19 +58,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n"
+    "import seaborn as sns\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -96,49 +100,49 @@
    "source": [
     "from ucimlrepo import fetch_ucirepo\n",
     "\n",
-    "# Load the Heart Disease dataset\n",
+    "#Loads the Heart Disease dataset\n",
     "heart_disease = fetch_ucirepo(id=45)\n",
     "\n",
-    "# Access data\n",
+    "#X contains the independent variables and y contains the dependent variables\n",
     "X = heart_disease.data.features\n",
     "y = heart_disease.data.targets\n",
     "\n",
-    "# Create the DataFrame for the dataset\n",
+    "#Create the DataFrame for the dataset\n",
     "variables_df = pd.DataFrame(heart_disease.variables)\n",
     "\n",
-    "# Extract the names of the feature columns\n",
+    "#Extract the names of the feature columns\n",
     "feature_columns = variables_df[variables_df['role'] == 'Feature']['name'].tolist()\n",
     "\n",
-    "# Create a DataFrame with the features\n",
+    "#Create a DataFrame with the features\n",
     "df = pd.DataFrame(X, columns=feature_columns)\n",
     "\n",
-    "# Add the target variable to the DataFrame\n",
+    "#Add the target variable to the DataFrame\n",
     "df['target'] = y\n",
     "\n",
-    "# Display the first few rows of the DataFrame\n",
+    "#Display the first few rows of the DataFrame\n",
     "print(df.head())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Data Preprocessing \n",
     "\n",
-    "# Handle missing values if any\n",
+    "#Handle missing values if any\n",
     "df = df.dropna()\n",
     "\n",
-    "# Encode categorical variables\n",
+    "#Encode categorical variables\n",
     "df = pd.get_dummies(df, columns=['sex', 'cp', 'fbs', 'restecg', 'exang', 'slope', 'thal'])\n",
     "\n",
-    "# Split the data into training and testing sets\n",
+    "#Split the data into training and testing sets\n",
     "X = df.drop('target', axis=1)\n",
     "y = df['target']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Standardize the data\n",
+    "#Standardize the data\n",
     "scaler = StandardScaler()\n",
     "X_train = scaler.fit_transform(X_train)\n",
     "X_test = scaler.transform(X_test)\n"
@@ -146,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -171,29 +175,26 @@
    "source": [
     "#Model Training and Evaluation\n",
     "# Train an SVM model\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "# Split the data into training and testing sets\n",
+    "\n",
+    "#Split the data into training and testing sets\n",
     "X = df.drop('target', axis=1)\n",
     "y = df['target']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Standardize the data\n",
+    "#Standardize the data\n",
     "scaler = StandardScaler()\n",
     "X_train = scaler.fit_transform(X_train)\n",
     "X_test = scaler.transform(X_test)\n",
     "\n",
-    "# Train an SVM model\n",
+    "#Train an SVM model\n",
     "svm = SVC(kernel='rbf', C=1, gamma='scale')\n",
     "svm.fit(X_train, y_train)\n",
     "\n",
-    "# Predict on the test set\n",
+    "#Predict on the test set\n",
     "y_pred_svm = svm.predict(X_test)\n",
     "\n",
-    "# Evaluate the SVM model\n",
+    "#Evaluate the SVM model\n",
     "svm_accuracy = accuracy_score(y_test, y_pred_svm)\n",
     "svm_precision = precision_score(y_test, y_pred_svm, average='weighted')  # or 'micro', 'macro', etc.\n",
     "svm_recall = recall_score(y_test, y_pred_svm, average='weighted')\n",
@@ -208,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -234,24 +235,24 @@
     "#Baseline Models:Neural Network\n",
     "from sklearn.neural_network import MLPClassifier\n",
     "\n",
-    "# Split the data into training and testing sets\n",
+    "#Split the data into training and testing sets\n",
     "X = df.drop('target', axis=1)\n",
     "y = df['target']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Standardize the data\n",
+    "#Standardize the data\n",
     "scaler = StandardScaler()\n",
     "X_train = scaler.fit_transform(X_train)\n",
     "X_test = scaler.transform(X_test)\n",
     "\n",
-    "# Train a Neural Network model\n",
+    "#Train a Neural Network model\n",
     "nn = MLPClassifier(random_state=42)\n",
     "nn.fit(X_train, y_train)\n",
     "\n",
-    "# Predict on the test set\n",
+    "#Predict on the test set\n",
     "y_pred_nn = nn.predict(X_test)\n",
     "\n",
-    "# Evaluate the Neural Network model\n",
+    "#Evaluate the Neural Network model\n",
     "nn_accuracy = accuracy_score(y_test, y_pred_nn)\n",
     "nn_precision = precision_score(y_test, y_pred_nn, average='weighted')  # or 'micro', 'macro', etc.\n",
     "nn_recall = recall_score(y_test, y_pred_nn, average='weighted')\n",
@@ -265,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -284,14 +285,14 @@
     "\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
-    "# Train a Random Forest model\n",
+    "#Train a Random Forest model\n",
     "rf = RandomForestClassifier(random_state=42)\n",
     "rf.fit(X_train, y_train)\n",
     "\n",
-    "# Predict on the test set\n",
+    "#Predict on the test set\n",
     "y_pred_rf = rf.predict(X_test)\n",
     "\n",
-    "# Evaluate the Random Forest model\n",
+    "#Evaluate the Random Forest model\n",
     "rf_accuracy = accuracy_score(y_test, y_pred_rf)\n",
     "rf_precision = precision_score(y_test, y_pred_rf, average='weighted')\n",
     "rf_recall = recall_score(y_test, y_pred_rf, average='weighted')\n",
@@ -306,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -333,14 +334,14 @@
     "\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
-    "# Train a K-Nearest Neighbors model\n",
+    "#Train a K-Nearest Neighbors model\n",
     "knn = KNeighborsClassifier()\n",
     "knn.fit(X_train, y_train)\n",
     "\n",
-    "# Predict on the test set\n",
+    "#Predict on the test set\n",
     "y_pred_knn = knn.predict(X_test)\n",
     "\n",
-    "# Evaluate the K-Nearest Neighbors model\n",
+    "#Evaluate the K-Nearest Neighbors model\n",
     "knn_accuracy = accuracy_score(y_test, y_pred_knn)\n",
     "knn_precision = precision_score(y_test, y_pred_knn, average='weighted')\n",
     "knn_recall = recall_score(y_test, y_pred_knn, average='weighted')\n",
@@ -355,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +382,7 @@
     }
    ],
    "source": [
-    "# Summarize the performance of all models\n",
+    "#Summarize the performance of all models\n",
     "performance = pd.DataFrame({\n",
     "    'Model': ['SVM', 'Neural Network', 'Random Forest', 'K-Nearest Neighbors'],\n",
     "    'Accuracy': [svm_accuracy, nn_accuracy, rf_accuracy, knn_accuracy],\n",
@@ -390,13 +391,13 @@
     "    'F1 Score': [svm_f1, nn_f1, rf_f1, knn_f1]\n",
     "})\n",
     "\n",
-    "# Print the performance DataFrame\n",
+    "#Print the performance DataFrame\n",
     "print(performance)\n",
     "\n",
-    "# Pivot the DataFrame to have metrics as rows and models as columns\n",
+    "#Pivot the DataFrame to have metrics as rows and models as columns\n",
     "performance_pivot = performance.melt(id_vars='Model', var_name='Metric', value_name='Score')\n",
     "\n",
-    "# Plot the performance metrics for comparison\n",
+    "#Plot the performance metrics for comparison\n",
     "plt.figure(figsize=(12, 8))\n",
     "sns.barplot(x='Metric', y='Score', hue='Model', data=performance_pivot)\n",
     "plt.ylim(0, 1)  # Adjust the y-axis limits to reduce vertical space\n",
